# nerva-colwise

./: CITATION.cff  CMakeLists.txt  Jamroot  README.md
.github/workflows/: deploy-docs.yml
doc/: nerva-cpp.adoc  nerva-cpp.html  nerva-python.adoc  nerva-python.html  nerva.bib
examples/: CMakeLists.txt  Jamfile  cifar10_debug.sh  cifar10_dense.sh  cifar10_dense_python.sh  cifar10_pruning.sh  cifar10_pruning_python.sh  cifar10_sparse.sh  cifar10_sparse_python.sh  cifar10_timer_brief.sh  cifar10_timer_brief_python.sh  cifar10_timer_full.sh  cifar10_timer_full_python.sh  create_cifar10_datasets.sh  mkl_benchmark.sh  mnist_dense.sh  mnist_dense_python.sh  mnist_sparse.sh  mnist_sparse_python.sh  subnormal_numbers.cpp
include/nerva/datasets/: cifar10reader.h  dataset.h  make_dataset.h
include/nerva/neural_networks/: activation_functions.h  batch_normalization_layers.h  dropout_layers.h  eigen.h  grow.h  layers.h  learning_rate_schedulers.h  loss_functions.h  mkl_eigen.h  mkl_sparse_matrix.h  mlp_algorithms.h  nerva_timer.h  numpy_eigen.h  parse_layer.h  parse_layer_utilities.h  print_matrix.h  prune.h  regrow.h  settings.h  sgd_options.h  softmax_functions.h  training.h
include/nerva/utilities/: parse_numbers.h  string_utility.h  timer.h
python/: setup.py
python/nerva/: activation_functions.py  datasets.py  grow.py  layers.py  learning_rate_schedulers.py  loss_functions.py  multilayer_perceptron.py  prune.py  regrow.py  training.py  utilities.py
python/nervacolwise/: activation_functions.py  datasets.py  grow.py  layers.py  learning_rate_schedulers.py  loss_functions.py  multilayer_perceptron.py  prune.py  regrow.py  training.py  utilities.py
python/tests/: loss_function_test.py  loss_test.py  multilayer_perceptron_test.py
python/tools/: generate_cifar10_augmented_datasets.py  mlp.py
src/: python-bindings.cpp
tests/: CMakeLists.txt  Jamfile  dataset_view_test.cpp  eigen_test.cpp  gradient_test.cpp  layer_test.cpp  loss_function_test.cpp  mkl_test.cpp  multilayer_perceptron_test.cpp  print_test.cpp  test-mlp-loss-functions.sh  test-mlp-options.sh  test-mlp.py-options.sh
tools/: CMakeLists.txt  Jamfile  mkl.cpp  mlp.cpp
