project(NERVA_TEST)

# Add SYCL support (only applicable to the Intel oneAPI icpx compiler)
option(ENABLE_SYCL "Enable SYCL support" OFF)
if(CMAKE_CXX_COMPILER_ID STREQUAL "IntelLLVM")
    if(ENABLE_SYCL)
        add_compile_definitions(NERVA_SYCL)
        add_compile_options(-Wno-deprecated-declarations)
        add_compile_options(-fsycl -fsycl-targets=spir64_x86_64 -fsycl-unnamed-lambda)
        add_link_options(-lsycl -fsycl -fsycl-targets=spir64_x86_64)
        if(DEFINED ENV{ONEAPI_ROOT})
            include_directories("$ENV{ONEAPI_ROOT}/latest/include")
            include_directories("$ENV{ONEAPI_ROOT}/compiler/latest/include")
        else()
            message(FATAL_ERROR "ONEAPI_ROOT environment variable is not set.")
        endif()
    endif()
endif()

file(GLOB SOURCES CONFIGURE_DEPENDS "*.cpp")
foreach(SRC ${SOURCES})
  get_filename_component(BASE "${SRC}" NAME_WE)
  add_executable("${BASE}" "${SRC}")
  add_test(NAME "nerva_${BASE}" COMMAND "${BASE}")
  target_include_directories("${BASE}" PRIVATE ${Python_INCLUDE_DIRS})
  target_link_libraries ("${BASE}" LINK_PUBLIC nervalib Eigen3::Eigen MKL::MKL Python3::Python pybind11::pybind11 doctest::doctest)
endforeach(SRC)
